--- a/html/templates/shipment_add.html
+++ b/html/templates/shipment_add.html
@@ -52,6 +52,7 @@
               <thead>
                 <tr>
                   <th>{% trans "ID" %}</th>
+                  <th>{% trans "ASIN" %}</th>
                   <th>{% trans "Nome" %}</th>
                   <th>{% trans "Descrição" %}</th>
                   <th>{% trans "Validade" %}</th>
