--- a/html/templates/product_add_edit.html
+++ b/html/templates/product_add_edit.html
@@ -35,9 +35,8 @@
                 <div class="bs-example col-md-12">
                      <div class="alert alert-warning">
                          <p><strong>{% trans "Armazenamento FBM" %}</strong></p>
-                         <p>{% trans "Você escolheu deixar seus produtos armazenados conosco até serem vendidos para seus clientes. Lembre-se que com essa escolha você aceita os custos
-                         relativos a armazenagem a partir do momento em que o produto chegar. Os valores são:" %}</p>
-                         <p><strong>{% trans "Storage:</strong> {% trans "$ 6.00 por pé cubico / Mês - Mínimo é de $ 25.00/Mês" %}</p>
+                         <p>{% trans "Você escolheu deixar seus produtos armazenados conosco até serem vendidos para seus clientes. Lembre-se que com essa escolha você aceita os custos relativos a armazenagem a partir do momento em que o produto chegar. Os valores são:" %}</p>
+                         <p><strong>{% trans "Storage:" %}</strong> {% trans "$ 6.00 por pé cubico / Mês - Mínimo é de $ 25.00/Mês" %}</p>
                          <p>* {% trans "Caso a soma do espaço ocupado por seus produtos dê menos de $25.00, será cobrado essa taxa mínima." %}</p>
                          <p>* {% trans "Caso o pagamento mensal não seja efetuado por 90 dias, os produtos serão doados." %}</p>
                      </div>
@@ -45,8 +44,7 @@
                 <div class="bs-example col-md-12">
                      <div class="alert alert-warning">
                          <p><strong>{% trans "Armazenamento FBA" %}</strong></p>
-                         <p>{% trans "Você escolheu por realizar envio FBA. A partir do momento que os seus produtos chegarem na nossa warehouse, você terá
-                         11 dias para criar o envio. Caso não seja realizado, haverá taxa de $ 0.30 por item no momento do envio. Consulte valores no nosso" %}
+                         <p>{% trans "Você escolheu por realizar envio FBA. A partir do momento que os seus produtos chegarem na nossa warehouse, você terá 11 dias para criar o envio. Caso não seja realizado, haverá taxa de $ 0.30 por item no momento do envio. Consulte valores no nosso" %}
                          <a href="/pt/#prices" class="download">{% trans "site" %}</a>.</p>
                          <p>* {% trans "Caso os produtos não sejam enviados, após 60 dias, os produtos serão doados." %}</p>
                      </div>
