--- a/html/templates/base_shipment_list.html
+++ b/html/templates/base_shipment_list.html
@@ -40,7 +40,7 @@
                     {% select_status filter_values '5' as sent_filter_status %}
                     <select class="form-control" id="filtro-status" name="status">
                       <option value="">{{ status }}</option>
-                      <option value="0" {{ create_filter_status }}>{% trans "Criar Envio" %}</option>
+                      <option value="0" {{ create_filter_status }}>{% trans "We create your AZ Shipment" %}</option>
                       <option value="1" {{ preparing_filter_status }}>{% trans "Preparando para Envio" %}</option>
                       <option value="2" {{ upload_filter_status }}>{% trans "Upload Etiqueta Caixa Autorizado" %}</option>
                       <option value="3" {{ payed_filter_status }}>{% trans "Pagamento Autorizado" %}</option>
