--- a/html/templates/product_add_edit.html
+++ b/html/templates/product_add_edit.html
@@ -24,17 +24,22 @@
 
                 <!-- Novo campo -->
                 <div class="form-group col-md-12">
-                  <label for="tipo_armazenamento">{% trans "Tipo de armazenamento" %}</label>
-                    <select class="form-control condition_validate" id="tipo_armazenamento" name="tipo_armazenamento">
-                         <option value="1">{% trans "Escolha o tipo de serviço..." %}</option>
-                        <option value="2">{% trans "Armazenamento FBM" %}</option>
-                        <option value="3">{% trans "Armazenamento FBA" %}</option>
+                  <label for="{{ form.stock_type.id_for_label }}">{{ form.stock_type.label }}*</label>
+                    {% select_stock_type form.stock_type.value '1' as stock_type_fba %}
+                    {% select_stock_type form.stock_type.value '2' as stock_type_fbm %}
+                    <select class="form-control stock_type_validate" id="{{ form.stock_type.id_for_label }}" name="{{ form.stock_type.html_name }}">
+                        <option value="">{{ form.stock_type.label }}</option>
+                        <option value="1" {{ stock_type_fba }}>{% trans "FBA" %}</option>
+                        <option value="2" {{ stock_type_fbm }}>{% trans "FBM" %}</option>
                     </select>
-                </div>
+                  {% for error in form.stock_type.errors %}
+                    <label id="stock_type-error" class="error" for="{{ form.stock_type.id_for_label }}">{{ error|escape }}</label>
+                  {% endfor %}
+                </div><br>
 
                 <div class="bs-example col-md-12">
                      <div class="alert alert-warning">
-                         <p><strong>{% trans "Armazenamento FBM" %}</strong></p>
+                         <p><strong>{% trans "Estoque FBM" %}</strong></p>
                          <p>{% trans "Você escolheu deixar seus produtos armazenados conosco até serem vendidos para seus clientes. Lembre-se que com essa escolha você aceita os custos relativos a armazenagem a partir do momento em que o produto chegar. Os valores são:" %}</p>
                          <p><strong>{% trans "Storage:" %}</strong> {% trans "$ 6.00 por pé cubico / Mês - Mínimo é de $ 25.00/Mês" %}</p>
                          <p>* {% trans "Caso a soma do espaço ocupado por seus produtos dê menos de $25.00, será cobrado essa taxa mínima." %}</p>
@@ -43,7 +48,7 @@
                   </div>
                 <div class="bs-example col-md-12">
                      <div class="alert alert-warning">
-                         <p><strong>{% trans "Armazenamento FBA" %}</strong></p>
+                         <p><strong>{% trans "Estoque FBA" %}</strong></p>
                          <p>{% trans "Você escolheu por realizar envio FBA. A partir do momento que os seus produtos chegarem na nossa warehouse, você terá 11 dias para criar o envio. Caso não seja realizado, haverá taxa de $ 0.30 por item no momento do envio. Consulte valores no nosso" %}
                          <a href="/pt/#prices" class="download">{% trans "site" %}</a>.</p>
                          <p>* {% trans "Caso os produtos não sejam enviados, após 60 dias, os produtos serão doados." %}</p>
@@ -63,7 +68,7 @@
                   {% endfor %}
                 </div><br>
                 <div class="form-group col-md-12">
-                  <label for="{{ form.asin.id_for_label }}">{{ form.asin.label }}</label>
+                  <label for="{{ form.asin.id_for_label }}">{{ form.asin.label }}*</label>
                     {% blocktrans asvar asin with asin_label=form.asin.label %}Digite o {{ asin_label }}{% endblocktrans %}
                   <input type="text" class="form-control" id="{{ form.asin.id_for_label }}" aria-describedby="asin" name="{{ form.asin.html_name }}" placeholder="{{ asin }}..." value="{% if form.asin.value %}{{ form.asin.value }}{% endif %}">
                   {% for error in form.asin.errors %}
@@ -114,19 +119,6 @@
                   {% endfor %}
                 </div><br>
               {% endif %}
-                <div class="form-group col-md-12">
-                  <label for="{{ form.stock_type.id_for_label }}">{{ form.stock_type.label }}*</label>
-                    {% select_stock_type form.stock_type.value '1' as stock_type_fba %}
-                    {% select_stock_type form.stock_type.value '2' as stock_type_fbm %}
-                    <select class="form-control stock_type_validate" id="{{ form.stock_type.id_for_label }}" name="{{ form.stock_type.html_name }}">
-                        <option value="">{{ form.stock_type.label }}</option>
-                        <option value="1" {{ stock_type_fba }}>{% trans "FBA" %}</option>
-                        <option value="2" {{ stock_type_fbm }}>{% trans "FBM" %}</option>
-                    </select>
-                  {% for error in form.stock_type.errors %}
-                    <label id="stock_type-error" class="error" for="{{ form.stock_type.id_for_label }}">{{ error|escape }}</label>
-                  {% endfor %}
-                </div><br>
 {% comment %}
               <!-- Campo novo Peso -->
 
@@ -273,5 +265,30 @@
         {% endif %}
       </div>
     </div>
-
+     <!-- Modal confirmacao de acao-->
+    <script type="text/javascript">
+    $(function(){
+    {% if custom_modal %}
+        $('#confirmacao').modal('show');
+    {% endif %}
+    });
+    </script>
+    <div id="confirmacao" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">{{ modal_title }}</h4>
+                </div>
+                <div class="modal-body">
+                    {% if custom_modal %}
+                        <p>{{ modal_message }}</p>
+                    {% endif %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
