--- a/html/templates/email/account-activation.html
+++ b/html/templates/email/account-activation.html
@@ -12,10 +12,18 @@
         <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo_sup.png" width="55" style="float: left;margin: 11px 0 0 0;"/><span style="display: block;margin: 27px 0 0 2px;margin-left: 0;font-size: 17px;font-weight: bold;color: #3C3E77;font-family: sans-serif;float: left;">VOI </span><span style="display: block;margin: 27px 0 0 2px;margin-left: 0;font-size: 17px;font-weight: bold;color: #DC3438;font-family: sans-serif;float: left;">SERVICES</span>
     </a>
     <div style="float: left; width: 97%; background: #eee; padding: 10px 20px 20px 20px;">
-        <p style="color:#858585;font:13px/120% 'Helvetica'">{% trans "Prezado(a)" %} {{ user_name }}</p>
         <p style="color:#858585;font:13px/120% 'Helvetica'">
-        {% blocktrans %}Seu cadastro foi realizado com sucesso, agora você está em nossa fila de espera de assinantes.<br>
-        Assim que sua vaga for liberada, você será notificado por email.{% endblocktrans %}
+        {% blocktrans %}Caro usuário, você foi registrado em nosso serviço de venda de Lotes - VOI Lots e de redirecionamento - FBA Prep Master.
+            <br><br>
+            • Serviço de redirecionamento FBA Prep Master (https://fbaprepmaster.com): Sempre que enviar produtos para a Warehouse da FBA Prep Master, você deverá incluir o seu código de cliente como remetente, além do seu nome, claro. Seu código de cliente é: {{ user_from_key }}
+            Veja tu\orial de funcionamento da plataforma: http://TUTORIAL-DA-PLATAFORMA-REDIRECIONAMENTO.
+            <br><br>
+            • Serviço de venda de Lotes (https://lots.voiserices.com): Os Lotes adquiridos irão direto para o seu estoque na FBA Prep Master, considerando o redirecionamento gratuito, dentro das políticas informadas no site.
+            Veja o tutorial explicando todo o funcionamento desde a compra de um lote até o redirecionamento: http://TUTORIAL-DE-LOTES
+            <br><br>
+            Att,
+            <br>
+            VOI Lots e FBA Prep Master{% endblocktrans %}
         </p>
         <p>
             {% url 'login' as my_url %}
