--- a/html/templates/how_it_works.html
+++ b/html/templates/how_it_works.html
@@ -2,6 +2,12 @@
 {% load i18n %}
 {% block comoFunciona %}active{% endblock %}
 
+{% block logo %}
+    <a href="/" class="navbar-brand page-scroll">
+        <img class="logo-fba" src="/static/img/logo-lots.png" />
+    </a>
+{% endblock %}
+
 {% block conteudo %}
 
     <div class="container-fluid">
