--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -39,10 +39,7 @@
 
 <body id="page-top" class="login">
     <div id="login-box">
-            <img src="/static/img/logo_sup.png" width="176"/>
-            <div class="contem-logo-login">
-                <span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span>
-            </div>
+            <img src="/static/img/logo-fba-new.png" width="176"/>
             <p class="left">{% trans "Digite abaixo seus dados de acesso" %}</p>
             <form action="" method="post" id="form-login">
               {% csrf_token %}
