--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -1,5 +1,12 @@
 {% extends 'includes/layout.html' %}
 {% load i18n l10n tz lots permissions users commons %}
+
+{% block logo %}
+    <a href="/" class="navbar-brand page-scroll">
+        <img class="logo-fba" src="/static/img/logo-lots.png" />
+    </a>
+{% endblock %}
+
 {% block conteudo %}
 
 <div class="container-fluid">
