--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -2,6 +2,12 @@
 {% load i18n l10n permissions users commons lots %}
 {% block storelist %}active{% endblock %}
 
+{% block logo %}
+    <a href="/" class="navbar-brand page-scroll">
+        <img class="logo-fba" src="/static/img/logo-lots.png" />
+    </a>
+{% endblock %}
+
 {% block conteudo %}
     <div class="banner-lote">
         <div class="">
