--- a/html/templates/store_purchase.html
+++ b/html/templates/store_purchase.html
@@ -2,6 +2,12 @@
 {% load i18n tz l10n commons %}
 {% block mypurchases %}active{% endblock %}
 
+{% block logo %}
+    <a href="/" class="navbar-brand page-scroll">
+        <img class="logo-fba" src="/static/img/logo-lots.png" />
+    </a>
+{% endblock %}
+
 {% block conteudo %}
 
    <div class="container-fluid">
