--- a/html/templates/terms.html
+++ b/html/templates/terms.html
@@ -2,6 +2,12 @@
 
 {% block help %}active{% endblock %}
 
+{% block logo %}
+    <a href="/" class="navbar-brand page-scroll">
+        <img class="logo-fba" src="/static/img/logo-lots.png" />
+    </a>
+{% endblock %}
+
 {% block conteudo %}
 
 <section>
