--- a/html/templates/product_add_edit.html
+++ b/html/templates/product_add_edit.html
@@ -37,7 +37,7 @@
                   {% endfor %}
                 </div><br>
 
-                <div class="bs-example col-md-12">
+                <div class="bs-example col-md-12 boxes-fb" id="FBM">
                      <div class="alert alert-warning">
                          <p><strong>{% trans "Estoque FBM" %}</strong></p>
                          <p>{% trans "Você escolheu deixar seus produtos armazenados conosco até serem vendidos para seus clientes. Lembre-se que com essa escolha você aceita os custos relativos a armazenagem a partir do momento em que o produto chegar. Os valores são:" %}</p>
@@ -46,7 +46,7 @@
                          <p>* {% trans "Caso o pagamento mensal não seja efetuado por 90 dias, os produtos serão doados." %}</p>
                      </div>
                   </div>
-                <div class="bs-example col-md-12">
+                <div class="bs-example col-md-12 boxes-fb" id="FBA">
                      <div class="alert alert-warning">
                          <p><strong>{% trans "Estoque FBA" %}</strong></p>
                          <p>{% trans "Você escolheu por realizar envio FBA. A partir do momento que os seus produtos chegarem na nossa warehouse, você terá 11 dias para criar o envio. Caso não seja realizado, haverá taxa de $ 0.30 por item no momento do envio. Consulte valores no nosso" %}
