--- a/html/templates/product_add_edit.html
+++ b/html/templates/product_add_edit.html
@@ -256,11 +256,11 @@
               </div><br>
                 <div class="bs-example col-md-12" id="alerta-valor-minimo">
                  <div class="alert alert-warning">
-                     <p><strong>Lembre-se!!</strong>
+                     <p><strong>{% trans "Lembre-se!!" %}</strong>
                          <br>
-                         Você deve inserir no from do seu envio o seu código de cliente para que possamos identificar as suas caixas quando chegarem na nossa warehouse.
+                         {% trans "Você deve inserir no FROM do seu envio o seu código de cliente para que possamos identificar as suas caixas quando chegarem na nossa warehouse." %}
                      </p>
-                     <p><strong>Fique atento e evite cobranças extras.</strong></p>
+                     <p><strong>{% trans "Fique atento e evite cobranças extras." %}</strong></p>
                  </div>
               </div>
               <div class="form-group col-md-12"><br><br>
