--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -147,9 +147,9 @@
                     <!-- Novo item com código de usuário -->
 
                     <li class="tutorial adress" id="abre-codigo">
-                        <a href="javascript:void(0);" class="abre-tutorial open-adress"><i class="fas fa-user-circle" style="font-size: 70px;"></i> {% trans "Código Usuário" %}: <span>FERADW</span></a>
+                        <a href="javascript:void(0);" class="abre-tutorial open-adress"><i class="fas fa-user-circle" style="font-size: 70px;"></i> {% trans "Código Usuário" %}: <span>{{ user.from_key }}</span></a>
                         <hr />
-                        <small id="btn-cod-cliente">Onde utilizo esse código?</small>
+                        <small id="btn-cod-cliente">{% trans "Onde utilizo esse código?" %}</small>
                     </li>
 {% endif %}
 {% comment %}
