estrutura estática para separação das URLs

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -147,7 +147,7 @@
                     <!-- Novo item com código de usuário -->
 
                     <li class="tutorial adress" id="abre-codigo">
-                        <a href="javascript:void(0);" class="abre-tutorial open-adress"><i class="fas fa-user-circle" style="font-size: 70px;"></i> {% trans "Código Usuário" %}: <span>{{ user.from_key }}</span></a>
+                        <a href="javascript:void(0);" class="abre-tutorial open-adress"><i class="fas fa-user-circle" style="font-size: 70px;"></i> {% trans "Código Cliente" %}: <span>{{ user.from_key }}</span></a>
                         <hr />
                         <small id="btn-cod-cliente">{% trans "Onde utilizo esse código?" %}</small>
                     </li>
